# promptify

./: .env.example  .gitignore  AGENTS.md  README.md  TODO.md  config.py  context.py  dbg.bat  editor.py  llf.bat  llf.sh  llr.bat  llr.sh  logger.py  main.py  problems.json  pyproject.toml  requirements.txt  resolver.py  ui.py
.github/workflows/: python.yml
cases/: base.md
cases/android/: .caseignore  config.json  legacy.md  llms.md  prompt.md  system.md
cases/angular/: .caseignore  config.json  legacy.md  llms.md  prompt.md  system.md
cases/angular_eq/: .caseignore  config.json  prompt.md  system.md
cases/cicd/: .caseignore  config.json  legacy.md  prompt.md  system.md
cases/java/: .caseignore  config.json  legacy.md  prompt.md  system.md
cases/jetpack/: .caseignore  config.json  legacy.md  llms.md  prompt.md  system.md
cases/markdown/: .caseignore  config.json  legacy.md  prompt.md  (+1 more)
scripts/: c.bat  c.ps1  c.py  c.sh  f.bat  filter.ps1  llc.bat  llc.sh  llf.sh  llr.bat  llt.bat  llt.sh  r.bat  r.sh  t.bat  t.sh
strings/: en.json
tests/: __init__.py  _editor_interactive_cases.py  _settings_master.py  _types.py  conftest.py  core_test.py  test_cli.py  test_config.py  test_context.py  test_core.py  test_editor_imports.py  test_editor_lexers_completion_layout.py  test_editor_overlays_issues.py  test_editor_runtime.py  test_editor_search.py  test_extractor.py  test_git_mentions.py  test_i18n.py  test_indexer.py  test_interactive.py  test_matching.py  test_performance.py  test_resolver.py  test_settings.py  test_terminal.py  test_token_counter.py
(+72 files in other folders)
