[project]
name = "promptify"
version = "0.1.0"
description = "collect context from your projects and create prompts in a neat way"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "pathspec>=1.0.4",
    "prompt-toolkit>=3.0.52",
    "pygments>=2.20.0",
    "pyperclip>=1.11.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.2",
    "rapidfuzz>=3.14.5",
    "ruff>=0.15.10",
    "watchdog>=6.0.0",
    "wcwidth>=0.6.0",
]

[tool.uv]
managed = true

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[project.scripts]
promptify = "promptify.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
